adds tabconten.js for tabs on parteiprogramme.htnl

--- a/content/parteiprogramme.html
+++ b/content/parteiprogramme.html
@@ -144,20 +144,96 @@
               <article>
                 <p>Was wollen die eigentlich von mir? Ich verstehe nur Bahnhof? Hier kannst du dich über die jeweils drei wichtigsten Fakten aus den Wahlprogrammen der Parteien informieren:</p>
               </article>
-              <div class="parteiprogramme-flex">
-                <h3>Die Linke</h3>
-                <h3>SPD</h3>
-                <h3>Die Grünen</h3>
-                <h3>FDP</h3>
-                <h3>CDU</h3>
-                <h3>AfD</h3>
-              </div>
+                <div class="tab-nav clearfix">
+              		<ul class="tabs" data-persist="true">
+              			<li><a href="#linke" title="Parteiprogramme der Die LINKE">Die Linke</a></li>
+                          <li><a href="#spd" title="Parteiprogramm der SPD">SPD</a></li>
+                          <li><a href="#gruenen" title="Parteiprogramm der Die Grünen">Die Grünen</a></li>
+                          <li><a href="#fdp" title="Parteiprogramm der FDP">FDP</a></li>
+                          <li><a href="#cdu" title="Parteiprogramm der CDU">CDU</a></li>
+                          <li><a href="#afd" title="Parteiprogramm der AfD">AfD</a></li>
+              		</ul>
+              	</div>
+                <div class="tabcontents clearfix">
+                      <div id="linke">
+                        <h3>Die Linke</h3>
+                        <p><strong>1. Gesetzlicher Mindest-Lohn! Wir wollen gute Arbeit für alle</strong></p>
+                        <p>DIE LINKE steht für die Umverteilung von Arbeit durch Arbeitszeitverkürzung, für gleichen Lohn bei gleicher Arbeit und einen existenzsichernden, gesetzlichen Mindestlohn. Wir setzen uns für einen umfassenden Kündigungsschutz ein und kämpfen gegen Billigjobs, Hungerlöhne und gegen den Ersatz regulärer Beschäftigung durch Leiharbeit oder Scheinselbstständigkeit.</p>
+                        <p><strong>2. Ein Leben in sozialer Sicherheit</strong></p>
+                        <p>DIE LINKE steht für eine sanktionsfreie Mindestsicherung, die Armut tatsächlich verhindert, und umfassenden Kündigungsschutz. Hartz IV muss weg. Jeder und jede hat das Recht auf Arbeit und das Recht, konkrete Arbeitsangebote abzulehnen, ohne Sperrzeiten oder andere Sanktionen fürchten zu müssen.</p>
+                        <p><strong>3. Überwindung jeglicher Form der Diskriminierung</strong></p>
+                        <p>Aufgrund des Geschlechts, des Alters, des sozialen Status, der Weltanschauung, der Religion, der ethnischen Herkunft, der sexuellen Orientierung und Identität oder aufgrund jedweder Behinderungen. Für DIE LINKE ist gelebter Antifaschismus verbunden mit dem Kampf gegen Kriegstreiberei, Antisemitismus, Islamfeindlichkeit, Rassismus und nationalen Dünkel.</p>
+                        <p>Quelle und das komplette Wahlprogramm: <a href="https://www.die-linke.de/partei/dokumente/programm-der-partei-die-linke/praeambel-dafuer-steht-die-linke/" title="Zum Parteiprogramm der DIE LINKE">Die Linke</a></p>
+                      </div>
+
+                      <div id="spd">
+                        <h3>SPD</h3>
+                        <p><strong>1. Gesetzlicher Mindest-Lohn! Wir wollen gute Arbeit für alle</strong></p>
+                        <p>DIE LINKE steht für die Umverteilung von Arbeit durch Arbeitszeitverkürzung, für gleichen Lohn bei gleicher Arbeit und einen existenzsichernden, gesetzlichen Mindestlohn. Wir setzen uns für einen umfassenden Kündigungsschutz ein und kämpfen gegen Billigjobs, Hungerlöhne und gegen den Ersatz regulärer Beschäftigung durch Leiharbeit oder Scheinselbstständigkeit.</p>
+                        <p><strong>2. Ein Leben in sozialer Sicherheit</strong></p>
+                        <p>DIE LINKE steht für eine sanktionsfreie Mindestsicherung, die Armut tatsächlich verhindert, und umfassenden Kündigungsschutz. Hartz IV muss weg. Jeder und jede hat das Recht auf Arbeit und das Recht, konkrete Arbeitsangebote abzulehnen, ohne Sperrzeiten oder andere Sanktionen fürchten zu müssen.</p>
+                        <p><strong>3. Überwindung jeglicher Form der Diskriminierung</strong></p>
+                        <p>Aufgrund des Geschlechts, des Alters, des sozialen Status, der Weltanschauung, der Religion, der ethnischen Herkunft, der sexuellen Orientierung und Identität oder aufgrund jedweder Behinderungen. Für DIE LINKE ist gelebter Antifaschismus verbunden mit dem Kampf gegen Kriegstreiberei, Antisemitismus, Islamfeindlichkeit, Rassismus und nationalen Dünkel.</p>
+                        <p>Quelle und das komplette Wahlprogramm: <a href="https://www.die-linke.de/partei/dokumente/programm-der-partei-die-linke/praeambel-dafuer-steht-die-linke/" title="Zum Parteiprogramm der DIE LINKE">Die Linke</a></p>
+                      </div>
+
+                      <div id="gruenen">
+                        <h3>Die Grünen</h3>
+                        <p><strong>1. Gesetzlicher Mindest-Lohn! Wir wollen gute Arbeit für alle</strong></p>
+                        <p>DIE LINKE steht für die Umverteilung von Arbeit durch Arbeitszeitverkürzung, für gleichen Lohn bei gleicher Arbeit und einen existenzsichernden, gesetzlichen Mindestlohn. Wir setzen uns für einen umfassenden Kündigungsschutz ein und kämpfen gegen Billigjobs, Hungerlöhne und gegen den Ersatz regulärer Beschäftigung durch Leiharbeit oder Scheinselbstständigkeit.</p>
+                        <p><strong>2. Ein Leben in sozialer Sicherheit</strong></p>
+                        <p>DIE LINKE steht für eine sanktionsfreie Mindestsicherung, die Armut tatsächlich verhindert, und umfassenden Kündigungsschutz. Hartz IV muss weg. Jeder und jede hat das Recht auf Arbeit und das Recht, konkrete Arbeitsangebote abzulehnen, ohne Sperrzeiten oder andere Sanktionen fürchten zu müssen.</p>
+                        <p><strong>3. Überwindung jeglicher Form der Diskriminierung</strong></p>
+                        <p>Aufgrund des Geschlechts, des Alters, des sozialen Status, der Weltanschauung, der Religion, der ethnischen Herkunft, der sexuellen Orientierung und Identität oder aufgrund jedweder Behinderungen. Für DIE LINKE ist gelebter Antifaschismus verbunden mit dem Kampf gegen Kriegstreiberei, Antisemitismus, Islamfeindlichkeit, Rassismus und nationalen Dünkel.</p>
+                        <p>Quelle und das komplette Wahlprogramm: <a href="https://www.die-linke.de/partei/dokumente/programm-der-partei-die-linke/praeambel-dafuer-steht-die-linke/" title="Zum Parteiprogramm der DIE LINKE">Die Linke</a></p>
+                      </div>
+
+                      <div id="fdp">
+                        <h3>FDP</h3>
+                        <p><strong>1. Gesetzlicher Mindest-Lohn! Wir wollen gute Arbeit für alle</strong></p>
+                        <p>DIE LINKE steht für die Umverteilung von Arbeit durch Arbeitszeitverkürzung, für gleichen Lohn bei gleicher Arbeit und einen existenzsichernden, gesetzlichen Mindestlohn. Wir setzen uns für einen umfassenden Kündigungsschutz ein und kämpfen gegen Billigjobs, Hungerlöhne und gegen den Ersatz regulärer Beschäftigung durch Leiharbeit oder Scheinselbstständigkeit.</p>
+                        <p><strong>2. Ein Leben in sozialer Sicherheit</strong></p>
+                        <p>DIE LINKE steht für eine sanktionsfreie Mindestsicherung, die Armut tatsächlich verhindert, und umfassenden Kündigungsschutz. Hartz IV muss weg. Jeder und jede hat das Recht auf Arbeit und das Recht, konkrete Arbeitsangebote abzulehnen, ohne Sperrzeiten oder andere Sanktionen fürchten zu müssen.</p>
+                        <p><strong>3. Überwindung jeglicher Form der Diskriminierung</strong></p>
+                        <p>Aufgrund des Geschlechts, des Alters, des sozialen Status, der Weltanschauung, der Religion, der ethnischen Herkunft, der sexuellen Orientierung und Identität oder aufgrund jedweder Behinderungen. Für DIE LINKE ist gelebter Antifaschismus verbunden mit dem Kampf gegen Kriegstreiberei, Antisemitismus, Islamfeindlichkeit, Rassismus und nationalen Dünkel.</p>
+                        <p>Quelle und das komplette Wahlprogramm: <a href="https://www.die-linke.de/partei/dokumente/programm-der-partei-die-linke/praeambel-dafuer-steht-die-linke/" title="Zum Parteiprogramm der DIE LINKE">Die Linke</a></p>
+                      </div>
+
+                      <div id="cdu">
+                        <h3>CDU</h3>
+                        <p><strong>1. Gesetzlicher Mindest-Lohn! Wir wollen gute Arbeit für alle</strong></p>
+                        <p>DIE LINKE steht für die Umverteilung von Arbeit durch Arbeitszeitverkürzung, für gleichen Lohn bei gleicher Arbeit und einen existenzsichernden, gesetzlichen Mindestlohn. Wir setzen uns für einen umfassenden Kündigungsschutz ein und kämpfen gegen Billigjobs, Hungerlöhne und gegen den Ersatz regulärer Beschäftigung durch Leiharbeit oder Scheinselbstständigkeit.</p>
+                        <p><strong>2. Ein Leben in sozialer Sicherheit</strong></p>
+                        <p>DIE LINKE steht für eine sanktionsfreie Mindestsicherung, die Armut tatsächlich verhindert, und umfassenden Kündigungsschutz. Hartz IV muss weg. Jeder und jede hat das Recht auf Arbeit und das Recht, konkrete Arbeitsangebote abzulehnen, ohne Sperrzeiten oder andere Sanktionen fürchten zu müssen.</p>
+                        <p><strong>3. Überwindung jeglicher Form der Diskriminierung</strong></p>
+                        <p>Aufgrund des Geschlechts, des Alters, des sozialen Status, der Weltanschauung, der Religion, der ethnischen Herkunft, der sexuellen Orientierung und Identität oder aufgrund jedweder Behinderungen. Für DIE LINKE ist gelebter Antifaschismus verbunden mit dem Kampf gegen Kriegstreiberei, Antisemitismus, Islamfeindlichkeit, Rassismus und nationalen Dünkel.</p>
+                        <p>Quelle und das komplette Wahlprogramm: <a href="https://www.die-linke.de/partei/dokumente/programm-der-partei-die-linke/praeambel-dafuer-steht-die-linke/" title="Zum Parteiprogramm der DIE LINKE">Die Linke</a></p>
+                      </div>
+
+                      <div id="afd">
+                        <h3>AfD</h3>
+                        <p><strong>1. Gesetzlicher Mindest-Lohn! Wir wollen gute Arbeit für alle</strong></p>
+                        <p>DIE LINKE steht für die Umverteilung von Arbeit durch Arbeitszeitverkürzung, für gleichen Lohn bei gleicher Arbeit und einen existenzsichernden, gesetzlichen Mindestlohn. Wir setzen uns für einen umfassenden Kündigungsschutz ein und kämpfen gegen Billigjobs, Hungerlöhne und gegen den Ersatz regulärer Beschäftigung durch Leiharbeit oder Scheinselbstständigkeit.</p>
+                        <p><strong>2. Ein Leben in sozialer Sicherheit</strong></p>
+                        <p>DIE LINKE steht für eine sanktionsfreie Mindestsicherung, die Armut tatsächlich verhindert, und umfassenden Kündigungsschutz. Hartz IV muss weg. Jeder und jede hat das Recht auf Arbeit und das Recht, konkrete Arbeitsangebote abzulehnen, ohne Sperrzeiten oder andere Sanktionen fürchten zu müssen.</p>
+                        <p><strong>3. Überwindung jeglicher Form der Diskriminierung</strong></p>
+                        <p>Aufgrund des Geschlechts, des Alters, des sozialen Status, der Weltanschauung, der Religion, der ethnischen Herkunft, der sexuellen Orientierung und Identität oder aufgrund jedweder Behinderungen. Für DIE LINKE ist gelebter Antifaschismus verbunden mit dem Kampf gegen Kriegstreiberei, Antisemitismus, Islamfeindlichkeit, Rassismus und nationalen Dünkel.</p>
+                        <p>Quelle und das komplette Wahlprogramm: <a href="https://www.die-linke.de/partei/dokumente/programm-der-partei-die-linke/praeambel-dafuer-steht-die-linke/" title="Zum Parteiprogramm der DIE LINKE">Die Linke</a></p>
+                      </div>
+                </div>
+              </section>
+              <article>
+                <p>Ahh! Die Partei find ich gut! Dann geh jetzt schnell zur <a href="sonntagsfrage.html" title="Zur Sonntagsfrage">Sonntagsfrage</a> und finde heraus, wie die Wahl ausfallen würde, wenn du heute die Qual der Wahl hättest.</p>
+              </article>
+              <section class="row text-center">
+                <a href="content/sonntagsfrage_neu.php" class="btn">Zur Sonntagswahl</a>
               </section>
           </div>
         </main>
       </section>
     </div>
     <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="../js/tabcontent.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <script src="../js/init.js" type="text/javascript"></script>
   </body>
