--- a/content/warum-waehlen.html
+++ b/content/warum-waehlen.html
@@ -143,7 +143,7 @@
             <section>
               <article>
                 <p>Die Qual oder die Wahl, und du entscheidest mit. Wenn du nicht wählen gehst, machen es andere. Und dann heißt es - “mimimi”, das find ich jetzt aber doof. Das ist wie damals mit der Klassensprecherwahl. Du hast dich enthalten und Aileen schlägt nur Radevormwald und Rosenheim für die Klassenfahrt vor. Vielleicht wäre es besser gewesen, Max zu wählen, dann wär es an den Gardasee gegangen.</p>
-                <p>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</p>
+                <p><strong>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</strong></p>
               </article>
               <article>
                 <h3>1. Weil es Dein Recht ist!</h3>
