adds impressum.html

--- a/content/impressum.html
+++ b/content/impressum.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="Landtagswahlen Nordrhein-Westfalen, Politik, NRW, Wieso Wählen, Sonntagsfrage">
   <meta name="author" content="Dustin Clever und Virginia Dächer">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,shrink-to-fit=no">
-  <title>Landtagswahlen in NRW 2017</title>
+  <title>Landtagswahlen in NRW 2017 | Impressum</title>
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../css/main.css">
   <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-icon-57x57.png">
@@ -35,9 +35,9 @@
           <li><img src="../img/icons/landtagswahlen.svg" alt="Vote-Icon" /><a href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
           <li><img src="../img/icons/diagram.svg" alt="Diagram-Icon" /><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
           <li><img src="../img/icons/party-program.svg" alt="Parteien-Icon" /><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
-          <li class="current"><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+          <li><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
           <li><img src="../img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
-          <li><img src="../img/icons/impressum.svg" alt="Impressum-Icon" /><a href="impressum.html" title="Impressum">Impressum</a></li>
+          <li class="current"><img src="../img/icons/impressum.svg" alt="Impressum-Icon" /><a href="impressum.html" title="Impressum">Impressum</a></li>
         </ul>
       </nav>
       <main>
@@ -52,9 +52,9 @@
               <li><a href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
               <li><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
               <li><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
-              <li><a class="current-mobile" href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+              <li><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
               <li><a href="politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
-              <li><a href="impressum.html" title="Impressum">Impressum</a></li>
+              <li><a class="current-mobile" href="impressum.html" title="Impressum">Impressum</a></li>
             </ul>
           </nav>
           <div class="header-flex">
@@ -136,32 +136,37 @@
             </g>
           </svg>
           <h2 class="heading1">Die Qual oder die Wahl?</h2>
-            <h2 class="heading2">Es ist Deine Entscheidung!</h2>
-            </div>
-          </header>
+          <h2 class="heading2">Es ist Deine Entscheidung!</h2>
+        </div>
+      </header>
 
-          <div class="main-content">
-            <h1>Warum solltest Du wählen gehen?</h1>
-            <section>
-              <article>
-                <p>Die Qual oder die Wahl, und du entscheidest mit. Wenn du nicht wählen gehst, machen es andere. Und dann heißt es - “mimimi”, das find ich jetzt aber doof. Das ist wie damals mit der Klassensprecherwahl. Du hast dich enthalten und Aileen schlägt nur Radevormwald und Rosenheim für die Klassenfahrt vor. Vielleicht wäre es besser gewesen, Max zu wählen, dann wär es an den Gardasee gegangen.</p>
-                <p><strong>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</strong></p>
-              </article>
-              <article>
-                <h3>1. Weil es Dein Recht ist!</h3>
-                <p>Es ist schlicht und einfach dein Recht, wählen zu gehen. Deine Vorfahren haben schon dafür gekämpft, mitentscheiden zu können und haben die Demokratie eingeführt. In vielen Ländern ist es keine Selbstverständlichkeit zu wählen und mit zu bestimmen  zu dürfen. Das solltest du dir bewusst machen, damit dieses Recht durch hohe Wahlbeteiligung bestehen bleibt.</p>
-                <h3>2. Weil jede Stimme zählt!</h3>
-                <p>In Deutschland ist jede Stimme gleich viel Wert. Deine einzelne Stimme wird natürlich nicht wahlentscheidend sein, aber jede einzelne Stimme trägt dazu bei, einem Kandidaten oder einer Partei den Zuspruch zu gestatten. Außerdem erhält man ein repräsentatives Bild der Gesamtbevölkerung.</p>
-                <h3>3. Weil andere entscheiden, wenn du nicht wählst!</h3>
-                <p>Wenn du nicht wählst, machen es andere. Am Ende bist du vielleicht unzufrieden mit den Entscheidungen, die der Gewählte trifft. Natürlich kann es sein, dass sich deine gewählte Partei bzw. dein gewünschter Kandidat gar nicht gewinnt. Aber wenigstens hast du ihm deine Stimme gegeben und weißt, dass du dein bestmöglichstes getan hast.</p>
-              </article>
-              </section>
+      <div class="main-content">
+        <h1>Impressum</h1>
+        <section>
+          <div class="parteiprogramme-flex">
+            <article>
+              <h3>Für den Inhalt verantwortlich:</h3>
+              <p>Dustin Clever & Virginia Dächer<br />
+              <a href="mailto:v.daecher@gmx.net" title="Mail an Virginia Dächer">v.daecher@gmx.net</a><br />
+              <a href="mailto:dustin.clver@googlemail.com" title="Mail an Dustin Clever">dustin.clver@googlemail.com</a></p>
+            </article>
+            <article>
+              <h3>Quelle der Fotos:</h3>
+              <p><a href="https://www.shutterstock.com/home">shutterstock.com</a></p>
+            </article>
+            <article>
+              <h3>Quelle der Texte:</h3>
+              <p>Virginia Dächer</p>
+              <p>Die Texte der Pateiprogramme entsprechen denen aus den veröffentlichten Parteiprogrammen der Parteien. Die Links zu den Quellen und vollständigen Programmen stehen unter den jeweiligen Texten.</p>
+            </article>
           </div>
-        </main>
-      </section>
-    </div>
-    <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../js/init.js" type="text/javascript"></script>
-  </body>
-  </html>
+        </section>
+      </div>
+    </main>
+  </section>
+</div>
+<script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+<script src="../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/init.js" type="text/javascript"></script>
+</body>
+</html>
