--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><img src="img/icons/party-program.svg" alt="Parteien-Icon" /><a href="content/parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
         <li><img src="img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
         <li><img src="img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="content/politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+        <li><img src="img/icons/impressum.svg" alt="Impressum-Icon" /><a href="content/impressum.html" title="Impressum">Impressum</a></li>
       </ul>
     </nav>
     <main>
@@ -53,6 +54,7 @@
             <li><a href="content/parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
             <li><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
             <li><a href="content/politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+            <li><a href="content/impressum.html" title="Impressum">Impressum</a></li>
           </ul>
         </nav>
     		<div class="header-flex">
