--- a/content/parteiprogramme.html
+++ b/content/parteiprogramme.html
@@ -37,6 +37,7 @@
           <li class="current"><img src="../img/icons/party-program.svg" alt="Parteien-Icon" /><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
           <li><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
           <li><img src="../img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+          <li><img src="../img/icons/impressum.svg" alt="Impressum-Icon" /><a href="impressum.html" title="Impressum">Impressum</a></li>
         </ul>
       </nav>
       <main>
@@ -48,11 +49,12 @@
               <span class="line"></span>
             </button>
             <ul class="hamburger-nav">
-              <li><a class="current-mobile" href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
+              <li><a href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
               <li><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-              <li><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
+              <li><a class="current-mobile" href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
               <li><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
               <li><a href="politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+              <li><a href="impressum.html" title="Impressum">Impressum</a></li>
             </ul>
           </nav>
           <div class="header-flex">
