adds diffrent background images to wrapper

--- a/content/warum-waehlen.html
+++ b/content/warum-waehlen.html
@@ -28,7 +28,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <div class="wrapper landtagswahlen">
+  <div class="wrapper warum-waehlen">
     <section class="container-full">
       <nav class="desktop-nav">
         <ul>
