--- a/content/parteiprogramme.html
+++ b/content/parteiprogramme.html
@@ -28,7 +28,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <div class="wrapper landtagswahlen">
+  <div class="wrapper parteiprogramme">
     <section class="container-full">
       <nav class="desktop-nav">
         <ul>
