adds link to logo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
         </nav>
     		<div class="header-flex">
-        <svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <a class="logo" href="index.html" title="Zur Startseite"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
             <g>
               <g>
@@ -134,7 +134,7 @@
                 C75.1,353.6,53,304.4,53,250.1z"/>
               </g>
             </g>
-          </svg>
+          </svg></a>
           <h2 class="heading1">Die Qual oder die Wahl?</h1>
           <h2 class="heading2">Es ist Deine Entscheidung!</h1>
     		</div>
