bugfix button-link

--- a/content/parteiprogramme.html
+++ b/content/parteiprogramme.html
@@ -229,7 +229,7 @@
                 <article>
                   <p>Ahh! Die Partei find ich gut! Dann geh jetzt schnell zur <a href="sonntagsfrage.html" title="Zur Sonntagsfrage">Sonntagsfrage</a> und finde heraus, wie die Wahl ausfallen würde, wenn du heute die Qual der Wahl hättest.</p>
                 </article>
-                <a href="content/sonntagsfrage_neu.php" class="btn">Zur Sonntagswahl</a>
+                <a href="sonntagsfrage.php" class="btn">Zur Sonntagswahl</a>
               </section>
           </div>
         </main>
