--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     			</article>
     		</section>
         <section class="row text-center">
-          <a href="content/sonntagsfrage_neu.php" class="btn">Zur Sonntagswahl</a>
+          <a href="content/sonntagsfrage.php" class="btn">Zur Sonntagswahl</a>
         </section>
       </section>
       <div class="graph-svg">
