adds cards and quotes to warum-waehlen.html

--- a/content/warum-waehlen.html
+++ b/content/warum-waehlen.html
@@ -147,15 +147,21 @@
                 <p>Die Qual oder die Wahl, und du entscheidest mit. Wenn du nicht wählen gehst, machen es andere. Und dann heißt es - “mimimi”, das find ich jetzt aber doof. Das ist wie damals mit der Klassensprecherwahl. Du hast dich enthalten und Aileen schlägt nur Radevormwald und Rosenheim für die Klassenfahrt vor. Vielleicht wäre es besser gewesen, Max zu wählen, dann wär es an den Gardasee gegangen.</p>
                 <p><strong>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</strong></p>
               </article>
-              <article>
-                <h3>1. Weil es Dein Recht ist!</h3>
+            </section>
+            <section class="card-container">
+              <article class="card">
+                <blockquote>1. Weil es Dein Recht ist!</blockquote>
                 <p>Es ist schlicht und einfach dein Recht, wählen zu gehen. Deine Vorfahren haben schon dafür gekämpft, mitentscheiden zu können und haben die Demokratie eingeführt. In vielen Ländern ist es keine Selbstverständlichkeit zu wählen und mit zu bestimmen  zu dürfen. Das solltest du dir bewusst machen, damit dieses Recht durch hohe Wahlbeteiligung bestehen bleibt.</p>
-                <h3>2. Weil jede Stimme zählt!</h3>
+              </article>
+              <article class="card">
+                <blockquote>2. Weil jede Stimme zählt!</blockquote>
                 <p>In Deutschland ist jede Stimme gleich viel Wert. Deine einzelne Stimme wird natürlich nicht wahlentscheidend sein, aber jede einzelne Stimme trägt dazu bei, einem Kandidaten oder einer Partei den Zuspruch zu gestatten. Außerdem erhält man ein repräsentatives Bild der Gesamtbevölkerung.</p>
-                <h3>3. Weil andere entscheiden, wenn du nicht wählst!</h3>
+              </article>
+              <aritlce class="card">
+                <blockquote>3. Deine Entscheidung</blockquote>
                 <p>Wenn du nicht wählst, machen es andere. Am Ende bist du vielleicht unzufrieden mit den Entscheidungen, die der Gewählte trifft. Natürlich kann es sein, dass sich deine gewählte Partei bzw. dein gewünschter Kandidat gar nicht gewinnt. Aber wenigstens hast du ihm deine Stimme gegeben und weißt, dass du dein bestmöglichstes getan hast.</p>
               </article>
-              </section>
+            </section>
           </div>
         </main>
       </section>
