--- a/content/warum-waehlen.html
+++ b/content/warum-waehlen.html
@@ -145,7 +145,7 @@
             <section>
               <article>
                 <p>Die Qual oder die Wahl, und du entscheidest mit. Wenn du nicht wählen gehst, machen es andere. Und dann heißt es - “mimimi”, das find ich jetzt aber doof. Das ist wie damals mit der Klassensprecherwahl. Du hast dich enthalten und Aileen schlägt nur Radevormwald und Rosenheim für die Klassenfahrt vor. Vielleicht wäre es besser gewesen, Max zu wählen, dann wär es an den Gardasee gegangen.</p>
-                <p><strong>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</strong></p>
+                <h3>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</h3>
               </article>
             </section>
             <section class="card-container">
@@ -158,7 +158,7 @@
                 <p>In Deutschland ist jede Stimme gleich viel Wert. Deine einzelne Stimme wird natürlich nicht wahlentscheidend sein, aber jede einzelne Stimme trägt dazu bei, einem Kandidaten oder einer Partei den Zuspruch zu gestatten. Außerdem erhält man ein repräsentatives Bild der Gesamtbevölkerung.</p>
               </article>
               <aritlce class="card">
-                <blockquote>3. Deine Entscheidung</blockquote>
+                <blockquote>3. Es ist Deine Entscheidung</blockquote>
                 <p>Wenn du nicht wählst, machen es andere. Am Ende bist du vielleicht unzufrieden mit den Entscheidungen, die der Gewählte trifft. Natürlich kann es sein, dass sich deine gewählte Partei bzw. dein gewünschter Kandidat gar nicht gewinnt. Aber wenigstens hast du ihm deine Stimme gegeben und weißt, dass du dein bestmöglichstes getan hast.</p>
               </article>
             </section>
