--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <section class="container-full">
     <nav class="desktop-nav">
       <ul>
-        <li class="current"><img src="img/icons/landtagswahlen.svg" alt="Vote-Icon" /><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
-        <li><img src="img/icons/diagram.svg" alt="Diagram-Icon" /><a href="content/sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-        <li><img src="img/icons/party-program.svg" alt="Parteien-Icon" /><a href="content/parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
-        <li><img src="img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
-        <li><img src="img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="content/politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
-        <li><img src="img/icons/impressum.svg" alt="Impressum-Icon" /><a href="content/impressum.html" title="Impressum">Impressum</a></li>
+        <a class="current" href="index.html" title="Zur Startseite"><img src="img/icons/landtagswahlen.svg" alt="Vote-Icon" /><li>Landtagswahlen</li></a>
+        <a href="content/sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil."><img src="img/icons/diagram.svg" alt="Diagram-Icon" /><li>Sonntagsfrage</li></a>
+        <a href="content/parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW"><img src="img/icons/party-program.svg" alt="Parteien-Icon" /><li>Parteiprogramme</li></a>
+        <a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?"><img src="img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><li>Warum wählen</li></a>
+        <a href="content/politik-abc.html" title="Das Fachchinesisch der Politik"><img src="img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><li>Politik ABC</li></a>
+        <a href="content/impressum.html" title="Impressum"><img src="img/icons/impressum.svg" alt="Impressum-Icon" /><li>Impressum</li></a>
       </ul>
     </nav>
     <main>
