essits html struture of desktop navigation

--- a/content/politik-abc.html
+++ b/content/politik-abc.html
@@ -32,12 +32,12 @@
     <section class="container-full">
       <nav class="desktop-nav">
         <ul>
-          <a href="../index.html" title="Zur Startseite"><img src="../img/icons/landtagswahlen.svg" alt="Vote-Icon" /><li>Landtagswahlen</li></a>
-          <a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil."><img src="../img/icons/diagram.svg" alt="Diagram-Icon" /><li>Sonntagsfrage</li></a>
-          <a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW"><img src="../img/icons/party-program.svg" alt="Parteien-Icon" /><li>Parteiprogramme</li></a>
-          <a href="warum-waehlen.html" title="Warum sollte man wählen gehen?"><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><li>Warum wählen</li></a>
-          <a class="current" href="politik-abc.html" title="Das Fachchinesisch der Politik"><img src="../img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><li>Politik ABC</li></a>
-          <a href="impressum.html" title="Impressum"><img src="../img/icons/impressum.svg" alt="Impressum-Icon" /><li>Impressum</li></a>
+          <li><a href="../index.html" title="Zur Startseite"><img src="../img/icons/landtagswahlen.svg" alt="Vote-Icon" />Landtagswahlen</a></li>
+          <li><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil."><img src="../img/icons/diagram.svg" alt="Diagram-Icon" />Sonntagsfrage</a></li>
+          <li><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW"><img src="../img/icons/party-program.svg" alt="Parteien-Icon" />Parteiprogramme</a></li>
+          <li><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?"><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" />Warum wählen</a></li>
+          <li><a class="current" href="politik-abc.html" title="Das Fachchinesisch der Politik"><img src="../img/icons/politik-abc.svg" alt="Politik-ABC-Icon" />Politik ABC</a></li>
+          <li><a href="impressum.html" title="Impressum"><img src="../img/icons/impressum.svg" alt="Impressum-Icon" />Impressum</a></li>
         </ul>
       </nav>
       <main>
