edits readme and fixes  some firefox bugs

--- a/content/warum-waehlen.html
+++ b/content/warum-waehlen.html
@@ -150,15 +150,15 @@
             </section>
             <section style="" class="card-container">
               <article class="card">
-                <blockquote>Weil es Dein Recht ist!</blockquote>
+                <h3>Weil es Dein Recht ist!</h3>
                 <p>Es ist schlicht und einfach dein Recht, wählen zu gehen. Deine Vorfahren haben schon dafür gekämpft, mitentscheiden zu können und haben die Demokratie eingeführt. In vielen Ländern ist es keine Selbstverständlichkeit zu wählen und mit zu bestimmen  zu dürfen. Das solltest du dir bewusst machen, damit dieses Recht durch hohe Wahlbeteiligung bestehen bleibt.</p>
               </article>
               <article class="card">
-                <blockquote>Weil jede Stimme zählt!</blockquote>
+                <h3>Weil jede Stimme zählt!</h3>
                 <p>In Deutschland ist jede Stimme gleich viel Wert. Deine einzelne Stimme wird natürlich nicht wahlentscheidend sein, aber jede einzelne Stimme trägt dazu bei, einem Kandidaten oder einer Partei den Zuspruch zu gestatten. Außerdem erhält man ein repräsentatives Bild der Gesamtbevölkerung.</p>
               </article>
               <aritlce class="card">
-                <blockquote>Es ist Deine Entscheidung</blockquote>
+                <h3>Es ist Deine Entscheidung</h3>
                 <p>Wenn du nicht wählst, machen es andere. Am Ende bist du vielleicht unzufrieden mit den Entscheidungen, die der Gewählte trifft. Natürlich kann es sein, dass sich deine gewählte Partei bzw. dein gewünschter Kandidat gar nicht gewinnt. Aber wenigstens hast du ihm deine Stimme gegeben und weißt, dass du dein bestmöglichstes getan hast.</p>
               </article>
             </section>
